<resources>
    <string name="app_name">Reading Adventures</string>
    <string name="app_id">814958481857239</string>
    <string name="pinterest_id">1439673</string>
    <string name="menu">Menu</string>
    <string name="mapa">Mapa</string>
    <string name="key">Chave</string>
    <string name="social_help">Olá! Preciso de ajuda para resoler este enigma.</string>
    <string name="social_brand_title">Gui adventures.</string>
    <string name="social_action_desc">Vive as aventuras de Gui e cria as tuas próprias aventuras!</string>
    <string name="social_app_not_found">Aplicação não encontrada</string>
    <string name="legend1">Legenda 1</string>
    <string name="legend2">Legenda 2</string>
    <string name="story">Story</string>
    <string name="errorSocialPicture">Erro ao gerar a imagem para partilhar.</string>
    <string name="socialMediaSessionClosed">A sessão na rede social está fechada.</string>
    <string name="helpRequest">Pede ajuda aos teus amigos</string>
    <string name="socialMediaError">Erro ao contatar a rede social pretendida.</string>
    <string name="pageType">Page type</string>
    <string name="pagRobotInFront">Um robot assustador surge no caminho de Gui!</string>
    <string name="pagRobotImGui">- Olá sou o Gui! Estou aqui para tentar encontrar o caminho para o porto.</string>
    <string name="pagRobotAttack">O robot não está para conversas e ataca Gui! Tens de encontrar o ponto fraco do robot, usa o amuleto.</string>
    <string name="pagRobotDestroyed">Destruíste o robot, e um pequeno ser aparece no seu lugar.</string>
    <string name="pagRobotDestroyedDialog">- Euh&#8230; olá&#8230; sou o Lopo, guarda da Terra dos Ladrões. Na verdade eles é que me obrigam a estar aqui a guardar esta terra de ladrões e vilões. Não sabia que eras da Terra de Lá, só depois de ver o amuleto mágico é que percebi. \n\n\t- Olá! Bela armadura! Espero não a ter estragado muito. Preciso de entrar aí, na "Terra dos limões". \n\n- Terra dos Ladrões! Esta cidade está cheia de malfeitores! \n\n\t- Isso, ladrões. Posso entrar? \n\n\t- Precisas da chave mágica para poder entrar.</string>
    <string name="pagRobotDestroyedEnigma">Tu pareces ser um rapaz inteligente, Gui. Será que me podes ajudar a resolver um enigma? Se me ajudares, digo-te onde se esconde Sob, o mais temível vilão desta terra.</string>
    <string name="pageTitle">Page title </string>
    <string name="library">Library</string>
    <string name="adventureRule">Regras da aventura</string>
    <string name="objectsHelp">1 - A tua fotografia \n\n2 - Podes desligar o som da aventura e podes mudar a tua fotografia \n\n3 - A lista dos capítulos e desafios que já leste e venceste\n\n4 - A tua pontuação \n\n5 - Ao longo da aventura encontrarás objetos que te ajudarão e te darão pontos</string>
    <string name="wood">Madeira</string>
    <string name="navHelp">Navega pela páginas com estes botões</string>
    <string name="helpHelp">Ajudas. O botão da esquerda custa pontos. Com o botão da direita podes pedir ajuda aos teus amigos nas redes sociais sem perder pontos.</string>
    <string name="rope">Corda</string>
    <string name="objects">Objetos</string>
    <string name="journey">Percurso</string>
    <string name="takePic">Tirar foto</string>
    <string name="map">Mapa</string>
    <string name="path">Percurso</string>
    <string name="pages">Páginas</string>
    <string name="soundInBedRoom">Um barulho no quarto</string>
    <string name="findGate">Encontrar o portal</string>
    <string name="semgiKingDom">Reino de Semgi</string>
    <string name="landOfLa">Terra de Lá</string>
    <string name="challengeToOvercome">Desafio para resolveres</string>
    <string name="enigma">Enigma</string>
    <string name="enigmaSolved">Enigma resolvido</string>
    <string name="somethingMoving">Algo a mexer</string>
    <string name="foundFriend">Encontrou uma amiga</string>
    <string name="adventureBegins">Aventura começa</string>
    <string name="afterLakeTitle">Regresso do lago</string>
    <string name="afterLake">Gui recuperou mais um objeto. A hora de recuperar o "Livro da Ciência" aproxima-se.</string>
    <string name="choicePath">Escolha de caminho</string>
    <string name="scarecrow">O espantalho</string>
    <string name="adventureGoesOn">Aventura continua</string>
    <string name="bedroom">Quarto</string>
    <string name="lockFriend">Abrir armadilha</string>
    <string name="aKey">Uma chave!</string>
    <string name="TheAmulet">O amuleto</string>
    <string name="amulet">Amuleto</string>
    <string name="gui_adventures">As aventuras de Gui</string>
    <string name="solveEnigmaFirst">Resolve o enigma primeiro antes de avançar.</string>
    <string name="action_settings">Settings</string>
    <string name="action_build_story">Criar história</string>
    <string name="action_read_story">Ler as minhas história</string>
    <string name="next">Próxima pág.</string>
    <string name="didnotopen">O cadeado não abriu, será que te enganaste?</string>
    <string name="solvefirst">Resolve o enigma antes de submeter.</string>
    <string name="submitSolution">Abrir</string>
    <string name="findTwoObjects">Encontra os dois objetos que podem ajudar Gui e Namaid a atravessar o lago.</string>
    <string name="findHelp">Ajuda</string>
    <string name="theAmulet">Aaro tinha algo para Gui.</string>
    <string name="theAmuletWarning">Clica no amuleto para guardá-lo nos teus objetos.</string>
    <string name="findRocks">Procurar pedras</string>
    <string name="pagFindPortal">Usa o amuleto para encontrar o portal que levará Gui ao Reino.</string>
    <string name="soundIntheDark">Gui dormia quando, de repente, foi acordado por um barulho.</string>
    <string name="pag1"> Uma criatura, que estava muito assustada, dirigiu-se para ele. </string>
    <string name="pag1_2">- Olá, o meu nome é Aaro. Todo o povo da Terra de Lá precisa da tua ajuda! \n- Euh olá, este sonho é tão real! \n- Ajuda-nos, senão todo o meu povo desaparecerá! </string>
    <string name="forestPath">Caminho da floresta</string>
    <string name="ravenPath">"Caminho dos corvos"</string>
    <string name="removeLines">Ainda tens linhas a mais&#8230;</string>
    <string name="youHaveDoneIt">Conseguiste!</string>
    <string name="removeLineFirst">Retira uma linha do peixe primeiro.</string>
    <string name="pagVillage">Gui encontrou-se com o líder da Terra de Lá.</string>
    <string name="pagVillageAfterHelp">A aventura vai começar.</string>
    <string name="pagVillageChallengeDone">Resolveste o enigma!</string>
    <string name="pagVillageChallengeDoneDialog">- No livro que nos roubaram, há duas luas atrás,  estão contidos os maiores segredos do nosso reino. Está na posse do temível Sob. Terás de partir discretamente, em direção à "Terra dos Ladrões". Podes consultar o mapa para saber onde tens de ir. Terás de recuperar vários objectos mágicos para vencer Sob.</string>
    <string name="useTheAmulet"> - Toma este amuleto, ajudar-te-á quando precisares. Encontra a passagem para Lá, que está algures neste quarto.</string>
    <string name="title_activity_pag2">Pag2</string>
    <string name="on_the_road">Gui começou a sua aventura. Muitos desafios surgirão.</string>
    <string name="on_the_road_Again">Gui conseguiu mais objetos, todos serão necessários para vencer Sob e recuperar o livro!</string>
    <string name="onTheRoadAgainDialog">Com certeza que vou precisar de todos os objetos, mas da espiga&#8230; da espiga talvez não.</string>
    <string name="on_the_roadWithFriend">Uma nova companheira juntou-se à aventura.</string>
    <string name="on_the_roadWithFriend2">Fim da história&#8230;para já. Continua a ler e responde a umas perguntas. Aquilo que responderes ajudará a escolher o destino dos nosso heróis.</string>
    <string name="on_the_road2">A aventura apenas começou e o nosso herói já está a ser observado.</string>
    <string name="on_the_roadFriendDialog">Como será que te chamas? Bilou?! Xoni?</string>
    <string name="on_the_roadThought">Indo eu, indo eu a caminho de Viseu. Tenho de encontrar o Manual da Filosofia&#8230; euh Manual da Ciência!</string>
    <string name="success">Conseguiste!</string>
    <string name="welcome">- Bem-vindo Gui. Estamos muito felizes por estares aqui. Giz procurou-te para nos ajudares a recuperar o «Manual da Ciência de Semgi». \nAntes de mais, deixa-me mostrar-te como podes viver esta aventura. Avança para a próxima página.</string>
    <string name="challengeToProveYouSelf">Gui, tenho um desafio para ti. Resolve-o para provares que és capaz de viver esta aventura.</string>
    <string name="pag2_1">Gui conseguiu chegar à Terra de Lá, no Reino de Semgi.</string>
    <string name="pagChestOpen">Encontraste uma chave!</string>
    <string name="pagAfterChestOpen">Encontraste uma chave!</string>
    <string name="pagLakeToCross">Um lago separa os héróis de uma ilha.</string>
    <string name="pagGateOpen">O que se poderá usar para abrir o portão?</string>
    <string name="pagEnterGate">Por fim, a entrada da «Terra dos Ladrões» está ao alcance de Gui.</string>
    <string name="theLake">O lago</string>
    <string name="theLakeToCross">Atravessar o lago</string>
    <string name="chest">Cofre</string>
    <string name="openChest">Chest open</string>
    <string name="returnFromLake">Os nossos heróis regressam com a chave. O confronto com Sob está cada vez mais perto.</string>
    <string name="robot">robô</string>
    <string name="robotAttacks">robô ataca</string>
    <string name="robotDestroyed">robô foi destruído</string>
    <string name="robotDestroyedEnigma">Lopo tem um desafio</string>
    <string name="pagScareCrowTitle">Este espantalho guarda algo que precisarás.</string>
    <string name="pagScareCrowWarning">Cuidado, não o acordes!</string>
    <string name="pagScareCrowSaveBottle">Rápido, guarda o frasco no teu saco e sai daí!</string>
    <string name="pagScareCrowDontTouchThere">Ah! Cuidado! O espantalho tem vida!</string>
    <string name="pagScareCrowThisIsNotABottle">Isso não é um frasco!</string>
    <string name="pagLake">Como chegar à ilha?</string>
    <string name="pagLakeGuiDialog">Temos de encontrar material para fazermos uma canoa.</string>
    <string name="pagFoundFriend">Gui entrou pela mata. E encontrou um animal a precisar de ajuda.</string>
    <string name="chestClosed">Um cofre fechado. O que estará dentro?</string>
    <string name="pagrobotAttack">O robô não está para conversas e ataca Gui! Tens de encontrar o ponto fraco do robô, usa o amuleto.</string>
    <string name="pagSomethingMoving">Enquanto caminhava, Gui apercebe-se que algo está a mexer.</string>
    <string name="scarecrowField">O campo de milho</string>
    <string name="trapLegend">A gata está presa numa armadilha para lobos!</string>
    <string name="ScareCrowField1">Gui e</string>
    <string name="ScareCrowField2">chegam ao campo de milho</string>
    <string name="enigma_missao">Resolve este enigma. \nTens de desenhar 2 quadrados que separem todas as cruzes, \nsem tocar nelas.</string>
    <string name="enigma_fish"> Um peixe está  a nadar para o lado esquerdo. \nMexendo apenas 3 linhas, \no peixe tem de ficar a nadar para o lado direito.</string>
    <string name="pag2_2">-Conseguiste chegar! Por favor ajuda-nos a encontrar o “Grande Livro da Ciência de Lá”.
Todos os segredos do nosso mundo estão nesse livro. Ele foi-nos roubado, está em Aquém-Lá, terra dos ladrões. Nós não temos força para conseguir. Por isso te chamamos. Precisamos de ti para salvar o nosso Reino! O nosso ancião tem uma prova para ti afim de mostrares o teu valor.</string>
    <string name="pag2_3">Gui sentia uma sensação estranha. Como se alguém o observava.</string>
    <string name="pag3_1"> Que caminho escolher?</string>
    <string name="pag4_1">O cadeado tem uma espécie de código matemático.</string>
    <string name="cannot">Cannot</string>
    <string name="lock">Cadeado</string>
</resources>