<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dialog="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_black"
    android:baselineAligned="false"
    android:fitsSystemWindows="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewPageTitle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pageTitle" />

            <EditText
                android:id="@+id/etPageTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/pageTitle"
                android:maxLength="100"
                android:nextFocusDown="@+id/etLEgend1"
                android:nextFocusLeft="@+id/etLEgend1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/pageType" />

            <Spinner
                android:id="@+id/page_type_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/page_type_preview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </RelativeLayout>

                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="380dp"
                    android:layout_height="fill_parent"
                    android:columnWidth="100dp"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    
                     >
                </GridView>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etLEgend1"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:hint="@string/legend1"
                android:maxLength="100"
                android:nextFocusDown="@+id/etLEgend2"
                android:nextFocusLeft="@+id/etLEgend2" />

            <ImageButton
                android:id="@+id/submitText"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/button_back"
                android:src="@drawable/ic_action_new"
                android:text="@string/next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewTitle2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/legend2" />

            <EditText
                android:id="@+id/etLEgend2"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:hint="@string/legend2"
                android:maxLength="100"
                android:nextFocusDown="@+id/etPageTitle"
                android:nextFocusLeft="@+id/etPageTitle" />

            <ImageButton
                android:id="@+id/submitText2"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/button_back"
                android:src="@drawable/ic_action_new"
                android:text="@string/next" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/savePage"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/button_back"
            android:src="@drawable/ic_action_save"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>